@@ -1,3 +1,12 @@
+2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
+
+	PR target/41939
+	Backport from mainline:
+	2009-06-05  Julian Brown  <julian@codesourcery.com>
+
+	* config/arm/ieee754-df.S (cmpdf2): Avoid writing below SP.
+	* config/arm/ieee754-sf.S (cmpsf2): Likewise.
+	
 2009-12-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
 	* config/s390/s390.md ("copysign<mode>3"): Pattern removed.
@@ -165,6 +174,7 @@
 	(*cmp_ssub_si): Ditto.
 	(*cmp_ssub_sidi): Ditto.
 
+>>>>>>> .r155152
 2009-11-18  Matthias Klose  <doko@ubuntu.com>
 
 	* config.gcc: Update ARM --with-fpu option list.
